Add contact buttons to the contact section
Added contact buttons for calling and WhatsApp.

--- a/index.html
+++ b/index.html
@@ -66,13 +66,23 @@
 
 <section id="contact">
     <h2>Contact Me</h2>
-    <p>Email: karmamime661@gmail.com</p>
-    <p>Available for freelance projects</p>
-</section>
 
+    <p>Email: karmamime661@gmail.com</p>
+
+    <p>Available for freelance projects</p>
+
+    <div class="contact-buttons">
+        <a href="tel:+971557481513" class="btn">Call Me</a>
+        <a href="https://wa.me/971557481513" target="_blank" class="btn whatsapp">
+            WhatsApp Me
+        </a>
+    </div>
+</section>
+    
 <footer>
     <p>&copy; 2026 Aila Web Design</p>
 </footer>
 
 </body>
+
 </html>
