Enhance project details with live site links
Updated project sections with live site links and improved descriptions.

--- a/index.html
+++ b/index.html
@@ -43,26 +43,31 @@
 <section id="projects">
   <h2>My Projects</h2>
 
-  <div class="project-container">
-
-    <div class="project-box">
-      <h3>Cleaning Company</h3>
-      <p>Responsive landing page for cleaning services.</p>
-    </div>
-
-    <div class="project-box">
-      <h3>Barber Shop</h3>
-      <p>Modern layout for a local barber business.</p>
-    </div>
-
-    <div class="project-box">
-      <h3>Restaurant</h3>
-      <p>Simple and elegant website for a food business.</p>
-    </div>
-
+  <div class="project-box">
+     <h3>Cleaning Company</h3>
+     <p>Responsive landing page for cleaning services.</p>
+     <a href="https://cleaning-demo.vercel.app" target="_blank" class="project-btn">
+        View Live Site
+     </a>
   </div>
-</section>
 
+  <div class="project-box">
+     <h3>Barber Shop</h3>
+     <p>Modern website for a local barber business.</p>
+     <a href="https://barber-demo.vercel.app" target="_blank" class="project-btn">
+        View Live Site
+     </a>
+  </div>
+
+  <div class="project-box">
+     <h3>Restaurant</h3>
+     <p>Simple and elegant website for a restaurant.</p>
+     <a href="https://restaurant-demo.vercel.app" target="_blank" class="project-btn">
+        View Live Site
+     </a>
+  </div>
+
+</section>
 <section id="contact">
   <h2>Contact Me</h2>
   <p>📞 Call: +971557481513</p>
@@ -76,3 +81,4 @@
 
 </body>
 </html>
+
