Fix project links in index.html
Updated project links for cleaning company and barber shop.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <div class="project-box">
      <h3>Cleaning Company</h3>
      <p>Responsive landing page for cleaning services.</p>
-     <a href="https://cleaning-demo.vercel.app" target="_blank" class="project-btn">
+    <a href="https://cleaning-demo-three.vercel.app" target="_blank" class="project-btn">
         View Live Site
      </a>
   </div>
@@ -81,4 +81,5 @@
 
 </body>
 </html>
+
 
