Fix HTML formatting and update project links

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
   <div class="project-box">
      <h3>Barber Shop</h3>
      <p>Modern website for a local barber business.</p>
-     <a href="https://barber-demo.vercel.app" target="_blank" class="project-btn">
-        View Live Site
+<a href="https://barber-demo-zeta.vercel.app" target="_blank" class="project-btn">
+    View Live Site
      </a>
   </div>
 
   <div class="project-box">
      <h3>Restaurant</h3>
      <p>Simple and elegant website for a restaurant.</p>
-     <a href="https://restaurant-demo.vercel.app" target="_blank" class="project-btn">
-        View Live Site
+<a href="https://restaurant-demo-woad.vercel.app" target="_blank" class="project-btn">
+    View Live Site
      </a>
   </div>
 
@@ -81,5 +81,6 @@
 
 </body>
 </html>
+
 
 
